force-app/main/default/objects/Contract_Position__c/Contract_Position__c.object-meta.xml
<CustomObject>
    <label>Contract Position</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>