force-app/main/default/objects/Contract_Position__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>Bone Cement</fullName>
            </value>
            <value>
                <fullName>Bone Cement Accessories</fullName>
            </value>
            <value>
                <fullName>Elbows</fullName>
            </value>
            <value>
                <fullName>Fluid Waste</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Partial Hips</fullName>
            </value>
            <value>
                <fullName>Patial Knees</fullName>
            </value>
            <value>
                <fullName>Pneumatic Comp</fullName>
            </value>
            <value>
                <fullName>Power/Blades</fullName>
            </value>
            <value>
                <fullName>Primary Hips</fullName>
            </value>
            <value>
                <fullName>Primary Knees</fullName>
            </value>
            <value>
                <fullName>Protective Apparel</fullName>
            </value>
            <value>
                <fullName>Pulse Lavage</fullName>
            </value>
            <value>
                <fullName>Revision Hips</fullName>
            </value>
            <value>
                <fullName>Revision Knees</fullName>
            </value>
            <value>
                <fullName>ROSA Brain</fullName>
            </value>
            <value>
                <fullName>ROSA Knee</fullName>
            </value>
            <value>
                <fullName>ROSA Spine</fullName>
            </value>
            <value>
                <fullName>Salvage Knees</fullName>
            </value>
            <value>
                <fullName>Shoulders</fullName>
            </value>
            <value>
                <fullName>Skin Grafting</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Tourniquets</fullName>
            </value>
            <value>
                <fullName>Traction</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
            <value>
                <fullName>Walter</fullName>
            </value>
            <value>
                <fullName>Wound Drainage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>