force-app/main/default/objects/Contract_Position__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <label>Commitment $</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>