force-app/main/default/objects/Contract_Position__c/fields/Commitment_P__c.field-meta.xml
<CustomField>
    <fullName>Commitment_P__c</fullName>
    <label>Commitment %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>