force-app/main/default/objects/Contract_Position__c/fields/Contract_Account__c.field-meta.xml
<CustomField>
    <fullName>Contract_Account__c</fullName>
    <label>Contract Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Positions</relationshipLabel>
    <relationshipName>Contract_Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>