force-app/main/default/objects/Contract_Position__c/fields/Contract_Position__c.field-meta.xml
<CustomField>
    <fullName>Contract_Position__c</fullName>
    <label>Contract Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Committed $</fullName>
            </value>
            <value>
                <fullName>Committed %</fullName>
            </value>
            <value>
                <fullName>Sole</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>No Award</fullName>
            </value>
            <value>
                <fullName>No Contract</fullName>
            </value>
            <value>
                <fullName>GPO Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>