force-app/main/default/objects/Contract_Position__c/fields/Contract_Position_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Position_Change_Date__c</fullName>
    <description>captures the most recent date on which the Contract Position field is modified</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Position Change Date</label>
    <type>Date</type>
</CustomField>