force-app/main/default/objects/Contract_Position__c/fields/Days_Since_Last_Contract_Position_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Contract_Position_Change__c</fullName>
    <formula>TODAY() - Contract_Position_Change_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Contract Position Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>