force-app/main/default/objects/Contract_Position__c/fields/Previous_Contract_Position__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract_Position__c</fullName>
    <description>Captures Previous Contract Position value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Contract Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>