force-app/main/default/objects/Contract_Position__c/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <label>Rebate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DRA</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>