force-app/main/default/objects/Contract_Position__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>CMFT</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Hips</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>Robotics</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Upper Extremities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>