force-app/main/default/objects/Contract_Position__c/fields/TTM_Sales__c.field-meta.xml
<CustomField>
    <fullName>TTM_Sales__c</fullName>
    <label>TTM Sales $ (ZB Current)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>