force-app/main/default/objects/Contract_Position__c/fields/TTM_Sales_Total_Market__c.field-meta.xml
<CustomField>
    <fullName>TTM_Sales_Total_Market__c</fullName>
    <label>TTM Sales $ (Total Market)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>