force-app/main/default/objects/Contract_Position__c/fields/TTM_Sales_ZB_Baseline__c.field-meta.xml
<CustomField>
    <fullName>TTM_Sales_ZB_Baseline__c</fullName>
    <label>TTM Sales $ (ZB Baseline)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>